--- a/index.html
+++ b/index.html
@@ -61,6 +61,19 @@
             <p>A personal portfolio website designed to showcase my research, projects, and achievements.</p>
             <a href="#" class="button">View Portfolio Code</a>
         </div>
+        <div class="project">
+            <h3>💼 Resume Classifier (NLP + Streamlit)</h3>
+              <p>
+                A machine learning web app that classifies resumes into job roles like 
+                <strong>Data Scientist</strong>, <strong>HR</strong>, or <strong>Web Developer</strong> 
+                using TF-IDF and logistic regression. Built with <strong>Streamlit</strong> and deployed on 
+                <strong>Hugging Face Spaces</strong>, featuring real-time predictions and WordCloud visualizations.
+              </p>
+              <a href="https://huggingface.co/spaces/your-username/resume-classifier" target="_blank">
+                🔗 Live Demo
+              </a>
+        </div>
+        
     </section>
 
     <section id="research">
