--- a/index.html
+++ b/index.html
@@ -62,17 +62,15 @@
             <a href="#" class="button">View Portfolio Code</a>
         </div>
         <div class="project">
-            <h3>💼 Resume Classifier (NLP + Streamlit)</h3>
-              <p>
-                A machine learning web app that classifies resumes into job roles like 
-                <strong>Data Scientist</strong>, <strong>HR</strong>, or <strong>Web Developer</strong> 
-                using TF-IDF and logistic regression. Built with <strong>Streamlit</strong> and deployed on 
-                <strong>Hugging Face Spaces</strong>, featuring real-time predictions and WordCloud visualizations.
-              </p>
-              <a href="https://huggingface.co/spaces/your-username/resume-classifier" target="_blank">
-                🔗 Live Demo
-              </a>
-        </div>
+    <h3>Resume Classifier (NLP + Streamlit)</h3>
+    <p>
+        A web app that predicts job roles like Data Scientist, HR, or Web Developer from resume text using TF-IDF and logistic regression. Built with Streamlit and deployed on Hugging Face Spaces.
+    </p>
+    <a href="https://huggingface.co/spaces/Sadna-222/resume-classifier" class="button" target="_blank">
+        View Live App
+    </a>
+</div>
+
         
     </section>
 
